fixed a layout issue, version bump

--- a/scss/components/_sheets.scss
+++ b/scss/components/_sheets.scss
@@ -145,7 +145,7 @@ h1,h2,h3,h4,h5 {
     border-radius: 10px;
     gap: 10px;
     padding: 5px 10px 5px 10px;
-    margin-bottom: 10px;
+    margin-bottom: 8px;
 
     .item-dice-box, .item-dice-box-initial {
         border: 2px dotted rgb(61, 61, 61);
